--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent">
 
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/info_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ></ListView>
+        android:scrollbars="vertical"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
