--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/notification_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
